# your-amicus

./: .gitignore  LICENSE  README.md  pcconfig.py  pyproject.toml  requirements.txt
.github/: action_test.yaml
.github/workflows/: action_test.yaml  main.yml
.web/: package-lock.json
.web/pages/: 404.js  _app.js  _document.js  home.js  index.js
.web/styles/code/: prism.js
.web/utils/: state.js
tests/: test_app.py
your_amicus/: chat.py  helpers.py  settings.py  state.py  your_amicus.py
your_amicus/chains/: __init__.py  default.py
