[tool.poetry]
name = "your-amicus"
version = "0.1.0"
description = "A legal chatbot"
authors = ["houfu <houfu@lovelawrobots.com>"]
readme = "README.md"
packages = [{ include = "your_amicus" }]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.74"
openai = "^0.26.2"


[tool.poetry.group.dev.dependencies]
pynecone = "^0.1.14"
pytest = "^7.2.1"
pytest-sugar = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
